Painel Administrativos - Padronização Sobre

--- a/src/app/admin-panel/sobre/sobre.component.css
+++ b/src/app/admin-panel/sobre/sobre.component.css
@@ -1,11 +1,7 @@
-#inline{
-    display: inline;
+.positionButtons {
+    text-align: end;
 }
 
-#margin{
-    padding: 1% 1%;
-}
-
-#text-right{
-    align-content: center;
+.positionTitle {
+    text-align: start;
 }
