--- a/src/app/admin-panel/sobre/sobre.component.html
+++ b/src/app/admin-panel/sobre/sobre.component.html
@@ -12,17 +12,17 @@
     <table *ngIf="!isLoading && statusResponse == 200" class="table">
       <thead>
         <tr>
-          <th scope="col">Titulo</th>
-          <th scope="col">Ordenação</th>
+          <th scope="col">Título</th>
           <th scope="col">Status</th>
+          <th scope="col">Ordenação</th>
           <th scope="col">Ações</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let sobre of sobre">
+        <tr *ngFor="let sobre of sobre | paginate: {itemsPerPage: limit, currentPage: p, totalItems: total}">
           <th scope="row">{{sobre['titulo']}}</th>
+          <td>{{sobre['status'] | status}}</td>
           <td>{{sobre['ordenacao']}}</td>
-          <td>{{sobre['status']}}</td>
           <td>
             <button class="btn btn-outline-warning btn-sm">Editar</button>
             <button class="btn btn-outline-danger btn-sm">Apagar</button>
@@ -32,5 +32,12 @@
     </table>
     <app-no-data *ngIf="!isLoading && statusResponse == 200 && !sobre"></app-no-data>
     <app-error *ngIf="!isLoading && statusResponse != 200 && !sobre"></app-error>
+    <nav *ngIf="sobre">
+    <ul class="pagination">
+      <pagination-controls class="my-pagination" (pageChange)="getPage($event)" previousLabel="Anterior"
+        nextLabel="Próximo">
+      </pagination-controls>
+    </ul>
+  </nav>
   </div>
 </div>
