--- a/src/app/admin-panel/sobre/sobre.component.html
+++ b/src/app/admin-panel/sobre/sobre.component.html
@@ -5,7 +5,7 @@
         <h5>Sobre</h5>
       </div>
       <div class="col-sm-6 positionButtons">
-        <button type="button" class="btn btn-outline-success btn-sm">Adicionar</button>
+        <button type="button" class="btn btn-outline-success btn-sm" [routerLink]="['/admin/sobre/create']">Adicionar</button>
       </div>
     </div>
     <app-loading [condition]="isLoading"></app-loading>
